update comment.